# SophieAI-Monorepo

./: .gitignore  Makefile  docker-compose.yaml
api/: .ebignore  CAREER_COACHES_README.md  Dockerfile  Dockerrun.aws.json  README.md  pyproject.toml
api/data/: test_user.json  user_6d431aa4.json
api/notebooks/: asyncio_fix.py  career_coach_experiment.py  career_coach_web_search_experiment.py  career_coach_web_tools_demo.py  career_coach_with_webtools.ipynb  job_details_extraction.ipynb  notebook_fix.py
api/src/: __init__.py  main.py
api/src/career_coaches/: config.py
api/src/career_coaches/application/: __init__.py  long_term_memory.py
api/src/career_coaches/application/conversation_service/: generate_response.py  reset_conversation.py
api/src/career_coaches/application/conversation_service/workflow/: chains.py  graph.py  nodes.py  state.py  tools.py
api/src/career_coaches/application/data/: __init__.py
api/src/career_coaches/application/evaluation/: generate_dataset.py
api/src/career_coaches/domain/: __init__.py  coach.py  web_coach.py
api/src/career_coaches/infrastructure/: __init__.py  api.py  history_api.py
api/src/common/application/rag/: __init__.py  retrievers.py
api/src/common/domain/: prompts.py
api/src/common/infrastructure/mongo/: client.py
api/src/material_generator/: config.py  main.py
api/src/material_generator/application/: __init__.py  data_extraction.py  resume_data_extractor.py
api/src/material_generator/domain/: cover_letter.py  prompts.py
api/src/resume_editor/application/: config.py  services.py
api/src/resume_editor/domain/: __init__.py  repositories.py  services.py
api/src/resume_editor/infrastructure/: llm.py
api/tools/: call_career_coach.py  reset_career_coach_memory.py
apps/api/: .dockerignore  CAREER_COACHES_README.md  Dockerfile  requirements.txt  run.py  start_api.py
apps/api/notebooks/: job_details_extraction.ipynb
apps/api/tools/: list_career_coaches.py  (+3 more)
apps/web/: .eslintignore  .eslintrc.json  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/: .cursorrules  .env.example  Dockerfile  app.yaml  next.config.js  package copy.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: env.mjs
(+206 files in other folders)
